--- a/packer/base/packer.yml
+++ b/packer/base/packer.yml
@@ -13,6 +13,7 @@ scripts:
   - base.sh
   - ixgbevf.sh
   - bootstrap.sh
+  - filebeat.sh
   - docker.sh
 
 execute: "echo ubuntu | {{ .Vars }} sudo -E -S sh '{{ .Path }}'"
