--- a/packer/base/root/etc/filebeat/filebeat.yml
+++ b/packer/base/root/etc/filebeat/filebeat.yml
@@ -12,7 +12,7 @@ filebeat:
 
 output:
   elasticsearch:
-    hosts: ['127.0.0.1:9200']
+    hosts: ['search-superphone-prod-3nancb7lqhjscutiz4pxr27vmq.us-west-2.es.amazonaws.com:80']
     worker: 1
     index: 'filebeat'
 
